# crypto-ETL-pipeline

./: .dockerignore  .gitignore  Dockerfile  Project-Overview.md  README.md  Readme.md  bigquery_client.py  bigquery_pagination.py  bq-to-csv.py  bq-to-parquet.py  bq_pagination_handler.py  bqcrypto_data_exporter.py  commands.txt  crypto_zilliqa_transactions.csv  crypto_zilliqa_transactions_new.parquet  crypto_zillqa_pipeline.py  df-bq-crypto-sa.json  docker-compose.yml  etl.py  load_data_to_localstack.py  main.py  parquet_loader.py  pyproject.toml  test.parquet  transform.py
credentials/: aws_credentials.json  df-bq-crypto-sa.json
docker/: Dockerfile  docker-compose.yml
old_python_scripts/: bigquery_pagination.py  bq_pagination_handler.py  bq_to_parquet.py
output/: daily_average_gas_usage_per_transaction.csv  daily_average_gas_usage_per_transaction.parquet  daily_transaction_volume.csv  daily_transaction_volume.parquet  monthly_active_addresses.csv  monthly_active_addresses.parquet  transaction_succes_rate.csv  transaction_succes_rate.parquet
src/: bqcrypto_data_exporter.py  bqcrypto_data_exporter_localstack.py  bqcrypto_data_loader_localstack.py  crypto_datapipeline_executor.py  crypto_localstack_s3_data_loader.py  pyproject.toml  queries.py  tempo.py
zilliqa_project/: dbt_project.yml
zilliqa_project/models/: dim_date.sql  dim_transaction_participants.sql  dim_transactions.sql  dim_transactions_gas.sql  fact_block_creation.sql  fct_block_creation.sql  fct_transact_vol.sql  key_metrics.txt  schema.yml
zilliqa_project/models/example/: key_metrics.sql  (+1 more)
