[tool.poetry]
name = "bq-py-crypto"
version = "0.1.0"
description = ""
authors = ["Hazperera <heperera826@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-bigquery = "^3.17.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"